Completed main page design, added 20 json items

--- a/Shuqair_Nazir_Project1/index.html
+++ b/Shuqair_Nazir_Project1/index.html
@@ -15,33 +15,26 @@
 	</head>
 	<!--Body, including background color and visited link color changes-->
 	<body>
-   	 <div style="position:absolute; left:0px; top:0px; width:640px; height:1136px;">
-		<header>
+    <div style="position:absolute; left:0px; top:0px; width:640px; height:1136px;">
+	  <header>
 			<div style="position: absolute; z-index:100"><img src="img/Header.gif" id="pgHeader"></div> 
             <!--Search-->
         	<div style="position: absolute; z-index:200"><img src="img/Search.gif" id="search"></div>
-		</header>
-		<section>
-			<!--Link for additem page, CTA-->
-			<div style="position:absolute; z-index:300"><a href="additem.html" ><img src="img/CTA.gif" id= "mainButton">
-          </a></div>
-            <!--Browse-->
-            <div style="position:absolute; z-index:500"><img src="img/Browse.gif" id= "browse"></div>
-            <!--Video-->
-            <div style="position:absolute; z-index:400"><img src="img/Video.gif" id= "vidTitle"></div>
-            <!--Video Links-->
-          <div style="position:absolute; z-index:380"><a href= "#" ><img src="img/USAMTIC.gif" id= "usaLink"></a></div>
-            <div style="position:absolute; z-index:380"><a href= "#" ><img src="img/TMS.gif" id= "tmsLink"></a></div>
-            
-            <!--Audio-->
-            <div style="position:absolute; z-index:600"><img src="img/Audio.gif" id= "audTitle"></div>
-            <!--Audio Links-->
-            <div style="position:absolute; z-index:580"><a href= "#" ><img src="img/USAMTIC.gif" id= "usaLink2"></a></div>
-            <div style="position:absolute; z-index:580"><a href= "#" ><img src="img/TMS.gif" id= "tmsLink2"></a></div>
+	   </header>
+	   <section>
+		   <!--Link for additem page, CTA-->
+		   <a href="additem.html" ><img src="img/CTA.gif" id= "mainButton"></a>
+           <!--Browse-->
+           <img src="img/Browse.gif" id= "browse">
+           <img src="img/Video.gif" id= "vidTitle">
+           <!--Video--><!--Video Links-->
+       	   <a href= "#" ><img src="img/USAMTIC.gif" id= "usaLink"></a><a href= "#" ><img src="img/TMS.gif" id= "tmsLink"></a><!--Audio-->
+       	   <img src="img/Audio.gif" id= "audTitle">
+           <!--Audio Links-->
+           <a href= "#" ><img src="img/USAMTIC.gif" id= "usaLink2"></a><img src="img/TMS.gif" id= "tmsLink2"></a><img src="img/Footer.gif" id= "pgFooter"></div>
             
             <!--Footer-->
-            <div style="position:absolute; z-index:600"><img src="img/Footer.gif" id= "pgFooter"></div>
-	   </section>
+       </section>
     </div>
 	</body>
 </html>
