--- a/Shuqair_Nazir_Project1/additem.html
+++ b/Shuqair_Nazir_Project1/additem.html
@@ -11,7 +11,7 @@
 		<meta name= "robots" content= "index, follow" />
 		<meta name="viewport" content="user-scalable=no,width=device-width" />       
         <link rel="stylesheet" href="css/styles.css" />
-		<title>VTC- Schedule</title>
+		<title>VTC Line Up</title>
 	</head>
 	<!--body, with background, link and visited links color changes, along with color changes for all text in body-->
 	<body>
