--- a/Shuqair_Nazir_Project1/index.html
+++ b/Shuqair_Nazir_Project1/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--Nazir Shuqair
-	VFW 1308
-	29 Aug 2013
-	Project 4-->
+	MiU 1310
+	3 OCT 2013
+	Project 1-->
 <html>
 	<head>
 		<meta charset="UTF-8" />
