--- a/Shuqair_Nazir_Project2/Bronze/index.html
+++ b/Shuqair_Nazir_Project2/Bronze/index.html
@@ -114,6 +114,11 @@
                         <a href="https://github.com/g67277/MiU.git">https://github.com/g67277/MiU.git</a>
                     </div>
                     <div data-role="collapsible" data-collapsed="true" data-theme="d">
+                        <h3>Apps Links</h3>
+                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Gold">Gold Link</a></div>
+                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Bronze">Bronze Link</a></div>
+                    </div>
+                    <div data-role="collapsible" data-collapsed="true" data-theme="d">
                         <h3>Development</h3>
                         <p>Future development will include targeting and displaying specific meetings when selecting one of the categories</p>
                     </div>
