--- a/Shuqair_Nazir_Project2/Gold/index.html
+++ b/Shuqair_Nazir_Project2/Gold/index.html
@@ -61,7 +61,7 @@
                         <ul>
                             <li><a href="#home" data-icon="home" class="ui-btn-active">Home</a></li>
                             <li><a href="#about" data-icon="info">About</a></li>
-                            <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                            <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                         </ul>
                     </div>
                 </div>
@@ -101,7 +101,50 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info" class="ui-btn-active">About</a></li>
-                        <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                    </ul>
+                </div>
+            </div>
+      </div>
+       <div data-role="page" id="current" data-add-back-btn="true">
+            <div data-role="header" data-theme="e">
+                <h1>Most Current</h1>
+            </div>
+            <div data-role="content" data-content-theme="a">
+            	<ul data-role="listview" data-inset="false" data-filter="true" data-position="">
+                        <li>
+                             <h2>COS Reocurring</h2>
+                             <p class="currentC">Meeting Time: 06:30 -- VIP PRESENT</p>
+                             <p class="currentN">Call code: 56322# -- Notes: User needs special software</p>
+                        </li>
+                        <li>
+                             <h2>Holiday Party</h2>
+                             <p class="currentC">Meeting Time: 09:30 -- VIP PRESENT</p>
+                             <p class="currentN">Call code: 76544#</p>
+                        </li>
+                        <li>
+                             <h2>Tech Training</h2>
+                             <p class="currentC">Meeting Time: 10:30</p>
+                             <p class="currentN">Call code: 86554# -- Notes: Monitor setup</p>
+                        </li>
+                        <li>
+                             <h2>Planning</h2>
+                             <p class="currentC">Meeting Time: 11:30</p>
+                             <p class="currentN">Call code: 54226# -- Notes: Needs HDMI cable</p>
+                        </li>
+                        <li>
+                             <h2>Navy Pride</h2>
+                             <p class="currentC">Meeting Time: 13:00 -- VIP PRESENT</p>
+                             <p class="currentN">Call code: 46545#</p>
+                        </li>
+                  </ul>
+            </div>
+            <div data-role="footer" data-position="fixed" data-theme="e" data-id="main">
+                <div data-role="navbar">
+                    <ul>
+                        <li><a href="#home" data-icon="home">Home</a></li>
+                        <li><a href="#about" data-icon="info">About</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -124,7 +167,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -147,7 +190,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -170,7 +213,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -193,7 +236,7 @@
                     <ul> 
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="additem.html" data-ajax="false" data-icon="plus">Add</a></li>
+                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
