Updated grid layout with text and imgs

--- a/Shuqair_Nazir_Project2/Bronze/index.html
+++ b/Shuqair_Nazir_Project2/Bronze/index.html
@@ -131,10 +131,10 @@
                     <div data-role="collapsible" data-collapsed="true" data-theme="d">
                         <h3>VTC Systems</h3>
                         <div class="ui-grid-a">
-                            <div class="ui-block-a"><div class="ui-bar ui-bar-c"><img src="img/vtc-2.png" /></div></div>
-                            <div class="ui-block-b"><div class="ui-bar ui-bar-c"><img src="img/vtc-3.png" /></div></div>
-                            <div class="ui-block-a"><div class="ui-bar ui-bar-c"><img src="img/vtc-4.png" /></div></div>
-                            <div class="ui-block-b"><div class="ui-bar ui-bar-c"><img src="img/vtc-5.png" /></div></div>
+                            <div class="ui-block-a"><div class="ui-bar ui-bar-c"><img src="img/vtc-2.png" /><h3>Cisco</h3></div></div>
+                            <div class="ui-block-b"><div class="ui-bar ui-bar-c"><img src="img/vtc-3.png" /><h3>TMA</h3></div></div>
+                            <div class="ui-block-a"><div class="ui-bar ui-bar-c"><img src="img/vtc-4.png" /><h3>DISA</h3></div></div>
+                            <div class="ui-block-b"><div class="ui-bar ui-bar-c"><img src="img/vtc-5.png" /><h3>Iron</h3></div></div>
                         </div><!-- /grid-b -->
                     </div>
                 </div>
