fixed navigation in newsstream

--- a/Shuqair_Nazir_Project2/Gold/index.html
+++ b/Shuqair_Nazir_Project2/Gold/index.html
@@ -61,7 +61,7 @@
                         <ul>
                             <li><a href="#home" data-icon="home" class="ui-btn-active">Home</a></li>
                             <li><a href="#about" data-icon="info">About</a></li>
-                            <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                            <li><a href="#current" data-icon="refresh">Most Current</a></li>
                         </ul>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info" class="ui-btn-active">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                 <h1>Most Current</h1>
             </div>
             <div data-role="content" data-content-theme="a">
-            	<ul data-role="listview" data-inset="false" data-filter="true" data-position="">
+            	<ul data-role="listview" data-inset="false" data-filter="true">
                         <li>
                              <h2>COS Reocurring</h2>
                              <p class="currentC">Meeting Time: 06:30 -- VIP PRESENT</p>
@@ -144,7 +144,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh" class="ui-btn-active">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                     <ul>
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
@@ -236,7 +236,7 @@
                     <ul> 
                         <li><a href="#home" data-icon="home">Home</a></li>
                         <li><a href="#about" data-icon="info">About</a></li>
-                        <li><a href="#current" data-ajax="false" data-icon="refresh">Most Current</a></li>
+                        <li><a href="#current" data-icon="refresh">Most Current</a></li>
                     </ul>
                 </div>
             </div>
