updated all documents

--- a/Shuqair_Nazir_Project3/Gold/index.html
+++ b/Shuqair_Nazir_Project3/Gold/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--Nazir Shuqair
 	MiU 1310
-	10 OCT 2013
-	Project 2-->
+	17 OCT 2013
+	Project 3-->
 <html>
 	<head>
 		<meta charset="UTF-8" />
@@ -84,8 +84,8 @@
                     </div>
                     <div data-role="collapsible" data-collapsed="true" data-theme="d">
                         <h3>Apps Links</h3>
-                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Gold">Gold Link</a></div>
-                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project2/Bronze">Bronze Link</a></div>
+                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project3/Gold">Gold Link</a></div>
+                        <div data-role="button"><a href="https://github.com/g67277/MiU/tree/gh-pages/Shuqair_Nazir_Project3/Bronze">Bronze Link</a></div>
                     </div>
                     <div data-role="collapsible" data-collapsed="true" data-theme="d">
                         <h3>Development</h3>
@@ -256,12 +256,12 @@
                 <div data-role="fieldcontain">
                     <label for="pocNum">* POC Number:</label>
                     <input type="tel" name="pocNum" id="pocNum" class="required number" placeholder="1231231234">
-                    <div style="font-size:12px; color:#666; font-family:Adobe Caslon Pro"><h5>Do not include spaces or dashes between numbers</h5></div>
+                    <div style="font-size:12px; color:#666; font-family:Helvetica,Arial,sans-serif"><p>Do not include spaces or dashes between numbers</p></div>
                 </div>
                 <div data-role="fieldcontain">
                     <label for="roomNum">* Room Number:</label>
                     <input type="text" name="roomNum" id="roomNum" placeholder="1-123">
-                    <div style="font-size:12px; color:#666; font-family:Adobe Caslon Pro"><h5>Enter floor level then the 3 digit room number</h5></div>
+                    <div style="font-size:12px; color:#666; font-family:Helvetica,Arial,sans-serif"><p>Enter floor level then the 3 digit room number</p></div>
                 </div>
                 <div data-role="fieldcontain">
                 	<label for="meetTime">* Time of Meeting:</label>
@@ -331,7 +331,7 @@
             <script src="js/libs/jquery.validate.min.js" type="text/javascript"></script>
             
             <script src="js/json.js" type="text/javascript"></script>
-   		  	<script src="js/Sample-main.js" type="text/javascript"></script>
+   		  	<script src="js/main.js" type="text/javascript"></script>
     </div>
     
 	</body>
