added some comments

--- a/Shuqair_Nazir_Project3/Gold/index.html
+++ b/Shuqair_Nazir_Project3/Gold/index.html
@@ -277,9 +277,13 @@
     <div data-role="page" id="additem" data-add-back-btn="true">
         <div data-role="header" data-theme="e">
             <h1>VTC Line-Up</h1>
+            <div style="text-align:right; font-size:10px; color:#666; font-family:Helvetica,Arial,sans-serif">
+    			<p>Fields with * are required</p>
+            </div>
         </div>
         <div data-role="content">
             <form action="" id="vtc">
+            	
                 <div data-role="fieldcontain">
                     <label for="meetName">* Meeting Title:</label>
                     <input type="text" name="meetName" id="meetName" class="required" />
