--- a/Shuqair_Nazir_Project4/Gold/index.html
+++ b/Shuqair_Nazir_Project4/Gold/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="cleartype" content="on">
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-    <link rel="stylesheet" href="css/goldTheme.css" />
+    <link rel="stylesheet" href="css/finalTheme.css" />
     <!--<link rel="stylesheet" href="css/styles.css" />-->
     <script src="js/libs/modernizr.custom.min.js"></script>
     <title>VTC Line Up</title>
@@ -371,7 +371,7 @@
                     <textarea></textarea>
                 </div>
 
-                <input type="submit" data-inline="true" value="submit" data-theme="e" />
+                <input type="submit" data-inline="true" value="submit" data-theme="c" />
                 <input type="reset" data-inline="true" value="reset" data-theme="a" data-mini="true" id="resetBtn" />
 
             </form>
